# aac

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  SKILLS-COMPOSITION.md  VISION.md  install.sh
.claude/workflows/: onboarding-discovery.md  project-configurator.md
.github/workflows/: ci.yml  release.yml
3t-scaffold-mcp/: Cargo.toml
3t-scaffold-mcp/src/: assets.rs  bundle.rs  main.rs  server.rs  sync.rs
3t-scaffold-mcp/src/tools/: configure.rs  inspect.rs  onboard.rs
agentic-setup/: CLAUDE-multi-agent-template.md  CLAUDE.designer-solo-template.md  CLAUDE.pm-solo-template.md  CLAUDE.solo-template.md  PROJECT.yaml  inspection.json
agentic-setup/agents/: backend-developer.template.md  designer.template.md  devops-engineer.template.md  frontend-developer.template.md  orchestrator.template.md  product-ai-engineer.template.md  product-manager.template.md
agentic-setup/docs/: FEATURE_PLAN.json  active-design.json  active-plan.json  active-sprint.json
agentic-setup/stacks/backend/: java-21-spring-boot.md  rust-1-95-mcp.md
agentic-setup/stacks/collaboration/: atlassian.md  design.md  figma.md  github-issues.md  product.md
agentic-setup/stacks/devops/: github-actions.md  pr-workflow.md
agentic-setup/stacks/frontend/: angular-21.md  react-19.md
agentic-setup/stacks/persistence/: jpa-postgres.md
agentic-setup/stacks/security/: cross-cutting.md
scaffold-mcp/: Cargo.toml
scaffold-mcp/src/: assets.rs  main.rs  server.rs  sync.rs
scaffold-mcp/src/tools/: configure.rs  inspect.rs  mod.rs  onboard.rs
